main-pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: main-app
spec:
     containers:
     - command: ["/bin/bash"]
       args: ["-c", "cp -f ./docker_config_prod/*.cfg /usr/src/app/example_reporting_main/config/. ; python example_reporting_main/main.py"]
       image: sarramagna/example_reporting_main
       name: main-app
       ports:
       - containerPort: 50603
     restartPolicy: Never
